--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 language: ruby
 sudo: false
 before_install: gem install bundler -v 1.14.6
+bundler_args: --without tools
 script: "bundle exec rake ci"
 rvm:
   - 1.9.3
